updated weather map and my webpage

--- a/My-Webpage.html
+++ b/My-Webpage.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap" rel="stylesheet">
     </head>
     <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark text-right">
         <a class="navbar-brand" href="#">Hey there! Thanks for dropping by!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="welcome.html">About Me</a>
+                    <a class="nav-link" href="streaming-player-ui.html" target="_blank">Designs?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="weather_map.html" target="_blank">Weather Application</a>
                 </li>
             </ul>
         </div>
