personal page progress

--- a/index.html
+++ b/index.html
@@ -1,81 +1,101 @@
 <!doctype html5>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Welcome, Home</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap" rel="stylesheet">
-    </head>
-    <body>
-    <nav class="navbar navbar-dark bg-dark text-right">
-        <a class="navbar-brand" href="#">Hey there! Thanks for dropping by!</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Hi, there!</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="streaming-player-ui.html" target="_blank">Designs?</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="weather_map.html" target="_blank">Weather Application</a>
-                </li>
-            </ul>
+</head>
+<body>
+<nav class="navbar navbar-dark bg-dark text-right nav-sm d-md-none d-lg-none">
+    <a class="navbar-brand" href="#" style="color: grey">Hey there! Thanks for dropping by!</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="streaming-player-ui.html" target="_blank">Designs?</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="weather_map.html" target="_blank">Weather Application</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<h1 class="text-center">Christopher Aguirre</h1>
+<hr class="style-eight">
+<div id="slider">
+    <div class="container">
+        <div class="slide">
+            <h3>About me</h3>
+            <p>
+                Hi there, My name is Christopher Aguirre. I'm an aspiring web developer with a business before pleasure
+                mindset.
+            </p>
         </div>
-    </nav>
-        <h1 class="text-center">Christopher Aguirre</h1>
-        <hr class="style-eight">
-    <div id="slider">
-        <div class="container">
-            <div class="slide">
-                <h3>About me</h3>
-                <p>
-                    Hi there, My name is Christopher Aguirre. I'm an aspiring web developer with a business before pleasure mindset.
-                </p>
-            </div>
-            <div class="slide">
-                <p>
-                    I was an enlisted soldier in the U.S Army for 4 years. Two of those years were spent fixing small arms and artillery, so I know
-                    that even the tiniest details matter when it comes to functioning and operational equipment.
-                </p>
-            </div>
-            <div class="slide">
-                <p>
-                    The ladder half of my contract was in an office working minor things on the computer like spreadsheets
-                    and inputting data into a data base for new personnel. Naturally, I took interest in the magic
-                    that happens behind the screens and what made things tick in technology.
-                </p>
-            </div>
-            <div class="slide">
-                <h3>My Motivators</h3>
-                <p>
+        <div class="slide">
+            <p>
+                I was an enlisted soldier in the U.S Army for 4 years. Two of those years were spent fixing small arms
+                and artillery, so I know
+                that even the tiniest details matter when it comes to functioning and operational equipment.
+            </p>
+        </div>
+        <div class="slide">
+            <p>
+                The ladder half of my contract was in an office working minor things on the computer like spreadsheets
+                and inputting data into a data base for new personnel. Naturally, I took interest in the magic
+                that happens behind the screens and what made things tick in technology.
+            </p>
+        </div>
+        <div class="slide">
+            <h3>My Motivators</h3>
+            <p>
 
-                </p>
-            </div>
-            <div class="slide">
-                <h3>Slide 5</h3>
-                <p>
-                    The suspected book hums opposite the unacceptable urge. The warning goodbye searches the substitute. This damp loses before the president. The slave elects the north inside an exciting salt.
-                </p>
-            </div>
+            </p>
+        </div>
+        <div class="slide">
+            <h3>Slide 5</h3>
+            <p>
+                The suspected book hums opposite the unacceptable urge. The warning goodbye searches the substitute.
+                This damp loses before the president. The slave elects the north inside an exciting salt.
+            </p>
         </div>
     </div>
+</div>
+<div id="board">
+    <ul id="top-board">
+        <li><a href="weather_map.html" target="_blank">Weather Application</a></li>
+        <li>You</li>
+        <li>There</li>
+    </ul>
+</div>
 
 
-        <!-- Main page content -->
+<!-- Main page content -->
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-        <!-- Your custom JS goes here -->
-    </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+<!-- Your custom JS goes here -->
+</body>
 </html>
 
 
