--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="card-header" id="headingTwo">
                 <h5 class="mb-0">
                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Skillsets
+                        Skills
                     </button>
                 </h5>
             </div>
