--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                   <em></em>
+                   <ul>
+                       <li><em>HTML 5</em></li>
+                       <li><em>CSS 3</em></li>
+                       <li><em>JavaScript</em></li>
+                       <li><em>Java</em></li>
+                   </ul>
                 </div>
             </div>
         </div>
