--- a/es6.html
+++ b/es6.html
@@ -5,7 +5,8 @@
     <title>ES6 exercise</title>
 </head>
 <body>
+<h1>ES6 Exercises</h1>
 
-<script src="js/es6.js"></script>
+<script src="js/map-filter-reduce-student.js"></script>
 </body>
 </html>
