--- a/es6.html
+++ b/es6.html
@@ -10,3 +10,26 @@
 <script src="js/map-filter-reduce-student.js"></script>
 </body>
 </html>
+
+<!--pod2 exercises-->
+
+https://edabit.com/challenges
+
+Create a function that takes three integer arguments (a, b, c) and returns the number of equal values.
+
+Examples
+equal(3, 4, 3) ➞ 2
+
+equal(1, 1, 1) ➞ 3
+
+equal(3, 4, 1) ➞ 0
+
+function equal(a, b, c) {
+if(a === b && a === c){
+return 3;
+}else if(a === b || a === c || b === c){
+return 2;
+}else{
+return 0;
+}
+}
