personal site progress

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                    <em>I like to mess around with things that involve creativity and one of my favorite things to do is take things that are broken and bring them back to life. I served in the U.S. Army for several years fixing weapons, so I know that the smallest details can make a world of a difference.</em>
+                    <em>I like to mess around with things that involve creativity and one of my favorite things to do is take things that are broken and bring them back to life. I served in the U.S. Army for several years fixing weapons, so I know that the smallest details can make a world of a difference.
+                    I'm an out of the box thinker. Instead of throwing peoples suggestions away, I prefer to take what's on the table and create an out of the box answer to questions that we as a team have been given. The number one goal, is to bring success to my team, no matter what the circumstances bring.  </em>
                 </div>
             </div>
         </div>
