started christmas break exercises

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<div class="contaier-fluid">
+<div class="container-fluid">
     <h1 class="text-center" id="header"></h1>
     <hr class="style-eight">
     <div class="text-center" style="margin-top: 20px">
@@ -75,52 +75,6 @@
         </div>
     </div>
     <hr class="style-eight">
-
-    <!--<div id="slider">-->
-    <!--    <div class="container">-->
-    <!--        <div class="slide">-->
-    <!--            <h3>About me</h3>-->
-    <!--            <p>-->
-    <!--                Hi there, My name is Christopher Aguirre. Thanks for stopping by to check out my web page. Here are a few things about myself.-->
-    <!--            </p>-->
-    <!--        </div>-->
-    <!--        <div class="slide">-->
-    <!--            <p>-->
-    <!--                I was an enlisted soldier in the U.S Army for 4 years. Two of those years were spent fixing weapons, so I know that even the tiniest details matter when it comes to functioning and operational equipment.-->
-    <!--            </p>-->
-    <!--        </div>-->
-    <!--        <div class="slide">-->
-    <!--            <p>-->
-    <!--                The ladder half of my contract was in an office working minor things on the computer like spreadsheets-->
-    <!--                and inputting data into a data base for new personnel. Naturally, I took interest in the magic-->
-    <!--                that happens behind the screens and what made things tick in technology.-->
-    <!--            </p>-->
-    <!--        </div>-->
-    <!--        <div class="slide">-->
-    <!--            <h3>My Motivators</h3>-->
-    <!--            <p>-->
-
-    <!--            </p>-->
-    <!--        </div>-->
-    <!--        <div class="slide">-->
-    <!--            <h3>Slide 5</h3>-->
-    <!--            <p>-->
-    <!--                The suspected book hums opposite the unacceptable urge. The warning goodbye searches the substitute.-->
-    <!--                This damp loses before the president. The slave elects the north inside an exciting salt.-->
-    <!--            </p>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <!--</div>-->
-    <!--<div id="board">-->
-    <!--    <ul id="top-board">-->
-    <!--        <br>-->
-    <!--        <li><a href="weather_map.html" target="_blank">Check the Weather</a></li>-->
-    <!--        <br>-->
-    <!--        <li><a href="streaming-player-ui.html">Let me design <br> your page</a></li>-->
-    <!--        <br>-->
-    <!--        <li><a href="#">Take a look at <br> my resumé</a></li>-->
-    <!--    </ul>-->
-    <!--</div>-->
 
 
     <footer id="info-bar">
