--- a/christmas-break.html
+++ b/christmas-break.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="css/christmas-break.css">
 </head>
 <body>
-<!--<div class="container-fluid">-->
-<!--    <h1 class="text-center" id="header"></h1>-->
-<!--</div>-->
 <div>
-    <h1 class="text-center jumbotron jumbotron-fluid" id="header"></h1>
+    <h1 class="text-center" id="header"></h1>
 </div>
 
 
@@ -25,14 +22,6 @@
     var txt = 'Merry Christmas!'; /* The text */
     var speed = 125; /* The speed/duration of the effect in milliseconds */
 
-    // function typeWriter() {
-    //     if (i < txt.length) {
-    //         document.getElementById("header").innerHTML += txt.charAt(i);
-    //         i++;
-    //         setTimeout(typeWriter, speed);
-    //     }
-    // }
-    // typeWriter();
 
     var chars = 'Merry Christmas!!!'.split('');
     var container = document.getElementById("header");
