weather map touchups and side project

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -85,7 +85,7 @@
             .setPopup(pops)
             .togglePopup()
             .addTo(map);
-        console.log("This is " + index + " foods!");
+        console.log("This is " + restaurant.name + " foods!");
     });
     });
 
