--- a/DoubleApc.html
+++ b/DoubleApc.html
@@ -10,6 +10,6 @@
 <h1>Double A's</h1>
    <span><img src="images/cards.png" alt="aces-cards" id="logo"></span>
     <h1>Pest Control</h1>
-</div>>
+</div>
 </body>
 </html>
