personal project progress

--- a/DoubleApc.html
+++ b/DoubleApc.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Double A's Pest Control</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/DoubleApc.css">
 </head>
 <body>
-<div class="card">
+<div class="header justify-content-center">
 <h1>Double A's</h1>
    <span><img src="images/cards.png" alt="aces-cards" id="logo"></span>
     <h1>Pest Control</h1>
